--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         <a href="">Blog</a>
         <a href="">Contact</a>
       </nav>
-      <img src="../img/fun-bus.jpg" alt="toy bus at the beach" />
+      <!-- <img src="../img/fun-bus.jpg" alt="toy bus at the beach" />
       <h2>Welcome To The Fun Bus!</h2>
       <p>
         Traveling expedition modern, clean webdesign blogger clean website theme
         website modern. Design pretty design, travelblogger adventure Wordpress
         wanderlust theme blogger website expedition theme travel blogger.
         Adventure fun traveler pretty design website expedition.
-      </p>
+      </p> -->
     </header>
 
     <div class="container home">
