done making the header responsive

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <body>
     <header class="container">
+      <h1 class="mobile-logo">Fun Bus</h1>
       <nav>
         <h1>Fun Bus</h1>
         <a href="">Home</a>
